# ComfyUI-IsNiceParts

./: .gitignore  README.md  __init__.py  node_mappings.py  pyproject.toml  requirements.txt
dwpose/: __init__.py  wholebody.py
